--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -1,6 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Insta-Texnopos"
+        android:fontFamily="cursive"
+        android:textSize="50sp"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toTopOf="@id/tilEmail"
+        app:layout_constraintStart_toStartOf="@id/tilEmail"
+        app:layout_constraintEnd_toEndOf="@id/tilEmail"
+        app:layout_constraintTop_toTopOf="parent"/>
+<com.google.android.material.textfield.TextInputLayout
+    android:id="@+id/tilEmail"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintHorizontal_bias="0.55">
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/etEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_standart"
+        android:hint="@string/input_your_email"
+        android:background="@drawable/shape"/>
+</com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tilPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tilEmail"
+        android:layout_marginTop="@dimen/margin_standart">
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin_standart"
+            android:hint="@string/input_your_password"
+            android:background="@drawable/shape" />
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnsignIn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tilPassword"
+        android:layout_marginHorizontal="@dimen/margin_standart"
+        android:layout_marginTop="40dp"
+        app:cornerRadius="8dp"
+        android:text="Sign In"/>
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/komentariyaSignUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/btnsignIn"
+        app:layout_constraintTop_toBottomOf="@id/btnsignIn"
+        android:text="Don't have an account?"
+        android:layout_marginTop="24dp"
+        android:textSize="20sp"
+        android:layout_marginStart="24dp"/>
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/signUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/komentariyaSignUp"
+        android:text="Sing up"
+        android:textSize="20sp"
+        android:textColor="#3366CB"
+        app:layout_constraintEnd_toEndOf="@id/btnsignIn"
+        app:layout_constraintTop_toTopOf="@id/komentariyaSignUp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
