--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -27,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin_standart"
+        android:inputType="textEmailAddress"
         android:hint="@string/input_your_email"
         android:background="@drawable/shape"/>
 </com.google.android.material.textfield.TextInputLayout>
@@ -41,6 +42,7 @@
             android:id="@+id/etPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPassword"
             android:layout_marginHorizontal="@dimen/margin_standart"
             android:hint="@string/input_your_password"
             android:background="@drawable/shape" />
@@ -74,4 +76,13 @@
         android:textColor="#3366CB"
         app:layout_constraintEnd_toEndOf="@id/btnsignIn"
         app:layout_constraintTop_toTopOf="@id/komentariyaSignUp"/>
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
