--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -26,8 +26,8 @@
         tools:layout="@layout/fragment_favorite"
         android:label="FavoriteFragment" />
     <fragment
-        android:id="@+id/profilFragment"
-        android:name="com.example.instatexnopos.ui.profil.ProfilFragment"
+        android:id="@+id/profileFragment"
+        android:name="com.example.instatexnopos.ui.profil.ProfileFragment"
         tools:layout="@layout/profil_fragment"
         android:label="ProfilFragment" />
 </navigation>
