--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 <androidx.appcompat.widget.AppCompatImageView
-    android:id="@+id/closeBtn"
+    android:id="@+id/cancelBtn"
     android:layout_width="56dp"
     android:layout_height="56dp"
     app:layout_constraintStart_toStartOf="parent"
@@ -16,7 +16,7 @@
         android:id="@+id/tvTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/closeBtn"
+        app:layout_constraintStart_toEndOf="@id/cancelBtn"
         app:layout_constraintEnd_toStartOf="@id/doneBtn"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="@dimen/margin_standart"
@@ -77,6 +77,7 @@
         app:layout_constraintTop_toBottomOf="@id/tvEditImage"
         android:layout_margin="@dimen/margin_standart">
     <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/editName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
@@ -92,12 +93,22 @@
         app:layout_constraintTop_toBottomOf="@id/tilName"
         android:layout_margin="@dimen/margin_standart">
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editBiography"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/white"
             android:text="@string/edit_biography"
             android:textSize="@dimen/text_size_standart"/>
     </com.google.android.material.textfield.TextInputLayout>
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
