--- a/app/src/main/res/layout/fragment_addpost.xml
+++ b/app/src/main/res/layout/fragment_addpost.xml
@@ -3,13 +3,44 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <androidx.appcompat.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivPost"
+        android:layout_width="0dp"
+        android:layout_height="300dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/etDescription"
+        android:layout_width="0dp"
+        android:minLines="4"
+        android:scrollbars="vertical"
+        android:gravity="start|top"
+
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/ivPost"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/edit_text_bg"
+        android:layout_margin="@dimen/margin_standart"
+        android:hint="@string/write_a_interesting_story"
+        android:padding="16dp"/>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnSend"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/send_a_post"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="@dimen/margin_standart"/>
+    <ProgressBar
+        android:id="@+id/loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/ivPost"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="This  Add Post fragment"
-        android:textSize="32dp"/>
+        android:visibility="gone"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
