--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -19,7 +19,11 @@
         android:id="@+id/addPostFragment"
         android:name="com.example.instatexnopos.ui.addpost.AddPostFragment"
         tools:layout="@layout/fragment_addpost"
-        android:label="AddPostFragment" />
+        android:label="AddPostFragment" >
+        <action
+            android:id="@+id/action_addPostFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
     <fragment
         android:id="@+id/favoriteFragment"
         android:name="com.example.instatexnopos.ui.favorite.FavoriteFragment"
